tests/parse-errors/intrinsics/unknown_at_intrinsic.cx
int main() {
    @mystery(1);
    return 0;
}
